# 11_VectorLMD

./: .pre-commit-config.yaml  db.sqlite3  hello.py  pyproject.toml
a/: settings.py  urls.py
apps/addon/: apps.py
apps/userauths/: apps.py
static/images/: Sin título.tiff
templates/apps/: base.htlm
