[project]
name = "11-vectorlmd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crispy-bootstrap5>=2025.4",
    "django>=5.2",
    "django-crispy-forms>=2.3",
    "django-import-export>=4.3.7",
    "django-jazzmin>=3.0.1",
    "django-taggit>=6.1.0",
    "import-export>=0.3.1",
    "pillow>=11.1.0",
    "pip>=25.0.1",
    "pre-commit>=4.2.0",
    "pyright>=1.1.398",
    "pytest>=8.3.5",
    "ruff>=0.11.4",
    "shortuuid>=1.0.13",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # upgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    
]
ignore = ["F401"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
docstring-code-line-length = 20
